--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,11 +1,11 @@
 @font-face {
     font-family: 'ArialMT';
-    src: url('ArialCyrMT.eot');
-    src: url('ArialCyrMT.eot?#iefix') format('embedded-opentype'),
-        url('ArialCyrMT.woff2') format('woff2'),
-        url('ArialCyrMT.woff') format('woff'),
-        url('ArialCyrMT.ttf') format('truetype'),
-        url('ArialCyrMT.svg#ArialCyrMT') format('svg');
+    src: url('../fonts/ArialCyrMT.eot');
+    src: url('../fonts/ArialCyrMT.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/ArialCyrMT.woff2') format('woff2'),
+        url('../fonts/ArialCyrMT.woff') format('woff'),
+        url('../fonts/ArialCyrMT.ttf') format('truetype'),
+        url('../fonts/ArialCyrMT.svg#ArialCyrMT') format('svg');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -13,12 +13,12 @@
 
 @font-face {
     font-family: 'ArialMTBold';
-    src: url('ArialCyrMT-Bold.eot');
-    src: url('ArialCyrMT-Bold.eot?#iefix') format('embedded-opentype'),
-        url('ArialCyrMT-Bold.woff2') format('woff2'),
-        url('ArialCyrMT-Bold.woff') format('woff'),
-        url('ArialCyrMT-Bold.ttf') format('truetype'),
-        url('ArialCyrMT-Bold.svg#ArialCyrMT-Bold') format('svg');
+    src: url('../fonts/ArialCyrMT-Bold.eot');
+    src: url('../fonts/ArialCyrMT-Bold.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/ArialCyrMT-Bold.woff2') format('woff2'),
+        url('../fonts/ArialCyrMT-Bold.woff') format('woff'),
+        url('../fonts/ArialCyrMT-Bold.ttf') format('truetype'),
+        url('../fonts/ArialCyrMT-Bold.svg#ArialCyrMT-Bold') format('svg');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
@@ -26,12 +26,12 @@
 
 @font-face {
     font-family: 'ArialBlack';
-    src: url('Arial-Black.eot');
-    src: url('Arial-Black.eot?#iefix') format('embedded-opentype'),
-        url('Arial-Black.woff2') format('woff2'),
-        url('Arial-Black.woff') format('woff'),
-        url('Arial-Black.ttf') format('truetype'),
-        url('Arial-Black.svg#Arial-Black') format('svg');
+    src: url('../fonts/Arial-Black.eot');
+    src: url('../fonts/Arial-Black.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/Arial-Black.woff2') format('woff2'),
+        url('../fonts/Arial-Black.woff') format('woff'),
+        url('../fonts/Arial-Black.ttf') format('truetype'),
+        url('../fonts/Arial-Black.svg#Arial-Black') format('svg');
     font-weight: 900;
     font-style: normal;
     font-display: swap;
